# opencadence

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/src/: cli.py  main.py  seed.py
backend/src/api/: anomalies.py  devices.py  router.py  schemas.py
backend/src/core/: auth.py  config.py  dependencies.py  events.py  logging.py  models.py  rate_limiter.py  registry.py
backend/src/deadletter/: router.py
backend/src/fhir/: mapper.py  router.py
backend/src/ingestion/: router.py  service.py
backend/src/metrics/: __init__.py  instruments.py  middleware.py  router.py
backend/src/processing/: base.py  service.py  validators.py
backend/src/storage/: database.py  models.py  repository.py  service.py
backend/src/streaming/: broadcaster.py  router.py
backend/tests/: test_cli.py  test_probes.py
backend/tests/api/: test_anomalies.py  test_devices.py  test_router.py
backend/tests/core/: test_auth.py  test_config.py  test_dependencies.py  test_events.py  test_logging.py  test_models.py  test_rate_limiter.py  test_registry.py
backend/tests/deadletter/: test_router.py
backend/tests/fhir/: test_mapper.py  test_router.py
backend/tests/ingestion/: test_router.py  test_service.py
backend/tests/metrics/: test_instruments.py  test_middleware.py  test_router.py
backend/tests/processing/: test_service.py  test_validators.py
backend/tests/storage/: test_repository.py  test_repository_anomalies.py  test_repository_devices.py  test_service.py
backend/tests/streaming/: test_broadcaster.py  test_router.py
(+17 files in other folders)
