[project]
name = "opencadence"
version = "0.1.0"
description = "Self-hostable health data pipeline for wearable devices"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "httpx>=0.28.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres]>=4.9.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0.0",
    "types-redis>=4.6.0",
]

[project.scripts]
opencadence = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "SIM", "TCH"]
ignore = [
    "S101",  # allow assert in tests
    "B008",  # Depends() in defaults is idiomatic FastAPI
    "S104",  # 0.0.0.0 binding is expected for Docker containers
    "S608",  # SQL view names from controlled dict, not user input
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring Docker services",
]
